# smart_meter

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.txt  build.sh
blued_converter/: CMakeLists.txt
blued_converter/src/: BluedHdf5Converter.cpp  BluedHdf5Converter.h  main.cpp
cmake/Scripts/: AddDoxygenTarget.cmake
data_analyzer/: CMakeLists.txt
data_analyzer/src/: ClassificationConfig.cpp  ClassificationConfig.h  DataAnalyzer.h  DataClassifier.h  EventFeatures.h  EventLabelManager.h  FeatureExtractor.h
data_loader/: CMakeLists.txt
data_loader/src/: AsyncDataQueue.h  BluedDataPoint.h  BluedDefinitions.h  BluedInputSource.cpp  BluedInputSource.h  BluedToDefaultDataManagerAdapter.h  DefaultDataPoint.h  PowerMetaData.cpp  PowerMetaData.h
dataloader/: CMakeLists.txt
dataloader/doc/: Doxyfile.in
dataloader/src/: BluedDataPoint.h  BluedDefinitions.h  BluedHdf5Converter.cpp  BluedHdf5Converter.h  BluedHdf5InputSource.cpp  BluedHdf5InputSource.h  BluedInputSource.cpp  BluedInputSource.h  BluedToDefaultDataManagerAdapter.h  DataManager.cpp  DataManager.h  DataPoint.h  DefaultDataPoint.h  DynamicStreamMetaData.cpp  DynamicStreamMetaData.h  PowerMetaData.cpp  PowerMetaData.h  PowerMeterData.cpp  PowerMeterData.h
energy_daq/: CMakeLists.txt
energy_daq/doc/: Doxyfile.in
energy_daq/src/: converter.py  main.c
energy_daq_interface/: CMakeLists.txt
energy_daq_interface/src/: MEDALDataPoint.h  daq_interface.cpp  daq_interface.h
event_detector/: CMakeLists.txt
event_detector/src/: DefaultEventDetectionStrategy.cpp  DefaultEventDetectionStrategy.h  Event.h  EventDetector.cpp  EventDetector.h  EventFeatures.cpp  EventMetaData.cpp  EventMetaData.h  EventStorage.cpp  EventStorage.h  dummy.cpp  main.cpp
experiments/: CMakeLists.txt
experiments/data_vis/: ClassificationVisualizer.h  CrossValidationStats.h  EventVisualizer.h  main.cpp
experiments/event_classification_setup/: CrossValidationResult.h  CrossValidationSuccess.h  SelectPartitions.h  SerializeEventLabelManager.h  main.cpp  results_printer.cpp  slimmed_validation.cpp
experiments/event_detection_setup/: main.cpp
experiments/integrated_speed_setup/: main.cpp
experiments/simple_setup/: main.cpp
libanalyze/: CMakeLists.txt  libanalyze_config.h.in
libanalyze/doc/: Doxyfile.in
libanalyze/src/: Algorithm.cpp  Algorithms.h  FastFourierFeature.h  FastFourierTransformCalculator.h  HarmonicsFeature.h  Utilities.h  analyze.h  dummy.cpp  event_detection.c  event_detection.h  fft_feature.c  fft_feature.h  root_mean_square_feature.c  root_mean_square_feature.h
smart_screen/: CMakeLists.txt
smart_screen/src/: main.cpp
test/: CMakeLists.txt
test/src/: DataLoaderTest.cpp  DataLoaderTest.h  EventStorageTest.cpp  EventStorageTest.h  LibAnalyzeTest.cpp  LibAnalyzeTest.h  test.cpp  test.h
working_dir/: config.ini
